2002-04-01  Sam Steingold  <sds@gnu.org>

	uncouple OPEN-STREAM-P from INPUT-STREAM-P/OUTPUT-STREAM-P
	* lispbibl.d (strmflags_open_bit_B): new bit (0)
	(strmflags_open_B): use it, not the top 4 bits
	(allocate_stream): add it to strmflags
	* spvw_typealloc.d (allocate_stream): ditto
	* stream.d (strmflags_rdwr_B): new mask (top 4 bits)
	(make_synonym_stream, make_twoway_stream, make_echo_stream)
	(MAKE-GENERIC-STREAM, make_socket_stream)
	(BUILT-IN-STREAM-SET-ELEMENT-TYPE): use it instead of
	strmflags_open_B
	(BUILT-IN-STREAM-ELEMENT-TYPE): do not return NIL for closed
	streams
	* io.d (pr_stream): print INPUT/OUTPUT/IO even for closed streams

2002-04-01  Stefan Kain  <stefan.kain@freenet.de>

	* spvw_heap.diff, spvw_language.diff, spvw_objsize.diff:
	* spvw_sigint.diff, spvw_space.diff, spvw_update.diff:
	* spvw_walk.diff: translated all comments

2002-03-31  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (commands4): `Continue' was mentioned twice
	From Arseny Slobodjuck <ampy@ich.dvo.ru>
	(commands): new function to combine COMMANDS[1-4]; do not
	COPY-LIST the return values thereof since they are already
	freshly consed lists
	(break-loop, step-hook-fn): use it
	(main-loop): do not COPY-LIST the return value of COMMANDS0

2002-03-30  Stefan Kain  <stefan.kain@freenet.de>

	* spvw_fault.d, spvw_global.d, spvw_mmap.d, spvw_multimap.d:
	translated all comments

2002-03-30  Sam Steingold  <sds@gnu.org>

	* io.d (pr_stream): print components of TWO-WAY and ECHO streams
	* lispbibl.d (strm_twoway_input, strm_twoway_output): define here
	* stream.d (strm_twoway_input, strm_twoway_output): do not define here

2002-03-30  Sam Steingold  <sds@gnu.org>

	For the benefit of internet protocol implementors, allow closing
	streams in only one direction - an interface to shutdown(2)
	* stream.d (builtin_stream_close_partial): new function - close a
	stream in only one direction
	(BUILT-IN-STREAM-CLOSE): instead of ignored :ABORT keyword arg,