@@ -12,8 +12,9 @@ User visible changes
 * New user variable CUSTOM:*TRACE-INDENT* controls TRACE output indentation.
   See <http://clisp.cons.org/impnotes.html#trace> for details.
 
-* You can now shutdown a socket for input or output separately using CLOSE.
-  See <http://clisp.cons.org/impnotes.html#close> for details.
+* You can now shutdown a socket for input or output separately
+  using SOCKET-STREAM-SHUTDOWN.
+  See <http://clisp.cons.org/impnotes.html#sost-shut> for details.
 
 * CUSTOM:*SOURCE-FILE-TYPES* and CUSTOM:*COMPILED-FILE-TYPES*
   now contain strings, not pathnames.
