@@ -882,6 +882,9 @@ LISPSYM(socket_stream_port,"SOCKET-STREAM-PORT",socket)
 LISPSYM(socket_stream_host,"SOCKET-STREAM-HOST",socket)
 LISPSYM(socket_stream_peer,"SOCKET-STREAM-PEER",socket)
 LISPSYM(socket_stream_local,"SOCKET-STREAM-LOCAL",socket)
+#ifdef HAVE_SHUTDOWN
+LISPSYM(socket_stream_shutdown,"SOCKET-STREAM-SHUTDOWN",socket)
+#endif
 #ifndef WIN32_NATIVE
 LISPSYM(socket_stream_handle,"SOCKET-STREAM-HANDLE",socket)
 #endif
